<resources>
    <string name="app_name">Miya</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="content_description_login_logo">M I Y A</string>
    <string name="login_label">L o g i n</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_string">Login</string>
    <string name="signup_button_string">Sign Up</string>
    <string name="miya_text_string">M I Y A</string>
    <string name="application_version">Version 1.0.0.0</string>
    <string name="title_activity_front"> </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
